# itsy_bitsy

./: .clang-format  .gitignore  .gitmodules  .style.yapf  CMakeLists.txt  LICENSE  README.md
.github/: funding.yml
.github/workflows/: macosx.yml  ubuntu.yml  windows.yml
benchmarks/: CMakeLists.txt
benchmarks/include/: span
benchmarks/include/itsy/benchmarks/: bit_intrinsics.hpp  opaque.hpp
benchmarks/results/: libstdc++.itsy.bitsy.benchmarks.json  vc++.itsy.bitsy.benchmarks.json
benchmarks/results/fresh/: sources.json
benchmarks/source/: copy.cpp  copy_n.cpp  count.cpp  equal.cpp  fill.cpp  fill_n.cpp  find.cpp  is_sorted.cpp  is_sorted_until.cpp  main.cpp  noop.cpp  opaque.cpp  operation.pop_back.cpp  operation.pop_front.cpp  operation.push_back.cpp  operation.push_front.cpp  rotate.cpp  swap_ranges.cpp
benchmarks/tools/: CMakeLists.txt  sources.json
benchmarks/tools/generate_graphs/: __init__.py  __main__.py  benchmarks.py  benchmarks_parser.py  defaults.py  generate_graphs.py  source_info.py  source_info_parser.py
cmake/: identify_stdlib.cmake  itsy.bitsy-config.cmake.in
docs/: CMakeLists.txt  libstdc++.md
docs/gsoc-2019/: CMakeLists.txt
docs/gsoc-2019/proposal/source/: thephd-gsoc-2019.bib  wg21.cls
docs/gsoc/complete/source/: thephd-gsoc-2019-finished.tex
docs/gsoc/proposal/source/: thephd-gsoc-2019.tex
docs/html/: itsy.bitsy.html
docs/xml/: itsy.bitsy.xml
docs/xml/manual/: bit_view.xml
examples/: CMakeLists.txt
examples/include/: assert.hpp  span  span.hpp
examples/source/: bit_iterator.cpp  bit_sequence.cpp  bit_sequence.in_place.construct.cpp  bit_view.constexpr.cpp  bit_view.cpp  bit_view.immutable.cpp  dynamic_bitset.alias.cpp  dynamic_bitset.in_place.construct.cpp
include/bitsy/: binary_digits.hpp  bit_iterator.hpp  bit_span.hpp  bit_view.hpp  bitsy.hpp  dynamic_bitset.hpp
include/bitsy/detail/: binary_digits.h  bit_iterator.h  bit_span.h  bit_view.h  dynamic_bitset.h
include/itsy/: algorithm.hpp  algorithm.std.hpp  basic_small_bit_vector.hpp  binary_digits.hpp  bit_buffer.hpp  bit_iterator.hpp  bit_operations.hpp  bit_sequence.hpp  bit_span.hpp  bit_view.hpp  bitsy.hpp  detail.hpp  dynamic_bitset.hpp  forward.hpp  small_bit_vector.hpp  version.hpp
include/itsy/detail/: algorithm.hpp  algorithm.std.hpp  bit_buffer.h  bit_buffer.hpp  bit_detail.h  bit_detail.hpp  bit_iterator.h  bit_iterator.hpp  bit_operations.hpp  bit_sequence.hpp  bit_view.h  bit_view.hpp  dynamic_bitset.h  ebco.hpp  is_detected.h  namespace_default_begin.hpp  namespace_default_end.hpp  small_bit_vector.hpp  span.hpp  type_traits.h  type_traits.hpp
single/: CMakeLists.txt  single.py
single/include/itsy/: bitsy.hpp  forward.hpp
tests/: CMakeLists.txt
tests/compile_failure/: CMakeLists.txt
tests/compile_failure/source/: bit_view.const.modify.auto.cpp  bit_view.const.modify.cpp  bit_view.modify.auto.cpp  bit_view.modify.cpp  bit_view.set_with_bool_trap.cpp
tests/compile_time/: CMakeLists.txt
tests/compile_time/single/: CMakeLists.txt
tests/compile_time/single/source/: include.single.bitsy.cpp  include.single.forward.cpp
tests/compile_time/source/: include.algorithm.cpp  include.algorithm.std.cpp  include.binary_digits.cpp  include.bit_buffer.cpp  include.bit_iterator.cpp  include.bit_operations.cpp  include.bit_sequence.cpp  include.bit_span.cpp  include.bit_view.cpp  include.bitsy.cpp  include.detail.cpp  include.dynamic_bitset.cpp  include.main.cpp  include.small_bit_vector.cpp  include.version.cpp
tests/include/: ranges  span  testsuite_hooks.h
tests/include/bitsy_tests/: generic_tests.hpp
tests/include/itsy/tests/: constants.hpp  ranges.hpp  shared_allocator_tests.hpp  shared_insert_erase_tests.hpp  shared_insert_tests.hpp  shared_tests.hpp  span.hpp  tracking_allocator.hpp
tests/include/itsy_tests/: constants.hpp  shared_insert_erase_tests.hpp  shared_tests.hpp
tests/run_time/: CMakeLists.txt
tests/run_time/source/: algorithm.cpp  algorithm.mutable.cpp  bit_detail.shift_and_preserve.cpp  bit_iterator.cpp  bit_operations.cpp  bit_operations.detail.shift_and_preserve.cpp  bit_sequence.assign.cpp  bit_sequence.constructors.cpp  bit_sequence.insert.cpp  bit_sequence.insert.erase.clear.bulk.large.cpp  bit_sequence.insert.erase.clear.bulk.large.signed.cpp  bit_sequence.insert.erase.clear.bulk.small.cpp  bit_sequence.insert.erase.clear.bulk.small.signed.cpp  bit_sequence.insert.erase.clear.cpp  bit_sequence.insert.erase.clear.signed.cpp  bit_sequence.insert.signed.cpp  bit_sequence.operations.cpp  bit_sequence.push_front.push_back.cpp  bit_sequence.reference_wrapper.cpp  bit_sequence.reference_wrapper.resize.cpp  bit_sequence.reference_wrapper.resize.signed.cpp  bit_sequence.reference_wrapper.signed.cpp  bit_sequence.resize.cpp  bit_sequence.resize.signed.cpp  bit_sequence.resize_signed.cpp  bit_span.cpp  bit_view.bounds.cpp  bit_view.const.comparison.cpp  bit_view.const.cpp  bit_view.cpp  bit_view.extents.cpp  bit_view.flip.set.reset.cpp  bit_view.operations.cpp  bit_view.subrange.cpp  constants.cpp  dynamic_bitset.assign.cpp  dynamic_bitset.constructors.cpp  dynamic_bitset.cpp  dynamic_bitset.insert.cpp  dynamic_bitset.insert.erase.clear.bulk.large.cpp  (+19 more)
tests/scratch/: CMakeLists.txt
tests/scratch/source/: main.cpp
upstream/libstdc++-v3/doc/xml/manual/: bit_extensions.xml
upstream/libstdc++-v3/include/ext/: bit
upstream/libstdc++-v3/include/ext/bit_ds/: bit_algorithm_std.h  bit_operations.h
upstream/libstdc++-v3/testsuite/ext/bit_ds/: algorithm.cpp  algorithm.mutable.cpp  bit_ds_tests_shared_tests.h  bit_iterator.cpp  bit_sequence.insert.cpp  bit_sequence.insert.erase.clear.bulk.large.cpp  bit_sequence.insert.erase.clear.bulk.small.cpp  bit_sequence.insert.erase.clear.cpp  bit_sequence.push_front.push_back.cpp  bit_sequence.reference_wrapper.cpp  bit_view.bounds.cpp  bit_view.const.cpp  bit_view.cpp  bit_view.flip.set.reset.cpp  bit_view.subrange.cpp  ranges  span
upstream/libstdc++/doc/xml/manual/: bit_extensions.xml
upstream/libstdc++/include/ext/: bit
upstream/libstdc++/include/ext/bit_ds/: bit_algorithm.h  (+3 more)
(+22 files in other folders)
